# ndk-icu-sample

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/android/icu4csample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: app.cpp  calendar.cpp  calendar.h  jnihelpers.cpp  jnihelpers.h  logging.h
app/src/main/java/com/android/icu4csample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/icu4csample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
